# ex

./: .gitignore  Makefile
c_so/: Makefile  add.c
debug_mq/: Makefile  README.md  rebar.config
debug_mq/apps/debug_mq/src/: debug_mq.app.src  debug_mq_app.erl  debug_mq_sup.erl
debug_mq/apps/glib/src/: glib_sup.erl  id_actor.erl
debug_mq/apps/pub/: README.md  rebar.config
debug_mq/apps/pub/src/: pub.app.src  pub.erl  pub_actor.erl  pub_app.erl  pub_sup.erl
debug_mq/config/: sys.config  vm.args
debug_sub/: Makefile  README.md  rebar.config
debug_sub/apps/amqp_client/: hex_metadata.config  rebar.config
debug_sub/apps/amqp_client/src/: amqp_channel.erl  amqp_channels_manager.erl  amqp_client.app.src  amqp_connection.erl  amqp_connection_sup.erl  amqp_gen_connection.erl  amqp_main_reader.erl  amqp_network_connection.erl
debug_sub/apps/glib/: rebar.config
debug_sub/apps/sub/: README.md  rebar.config
debug_sub/config/: sys.config  vm.args
erl_use_obj/: README.md  rebar.config
erl_use_obj/config/: sys.config  vm.args
ers/: .gitignore  Cargo.toml  Makefile  build.rs
ers/src/: api_clang_dll.rs  api_golang_dll.rs  api_string.rs  atoms.rs  ex_struct.rs  fun.rs  lib.rs  list.rs  map.rs  record.rs  term.rs  tuple.rs
ers/src/chapter1/: mod.rs  subject1.rs
ex_use_ers/: .gitignore  Makefile  README.md  mix.exs
ex_use_ers/apps/ers/: .gitignore  README.md  mix.exs
ex_use_ers/rel/: config.exs
go_so/: Makefile  libadd.h  main.go
use_ers/: .gitignore  Makefile  README.md  rebar.config
use_ers/config/: sys.config  vm.args
(+27 files in other folders)
